# v2v-textbook-rag-llm

./: .gitignore  Modelfile  Pipfile  README.md  __init__.py  function.json  index.html  index1.html  index2.html  manage.py  ollamaInference.ipynb  pyproject.toml  requirements.txt  test-pg1-detected.json  test.ipynb  testDockerfile  vercel.json  wsgi.py
.github/workflows/: master_vtv-speech-services.yml  master_yozu-speech-services.yml  master_yozu-teacher-voicebot.yml
frontend/: bun.lockb  package.json
frontend/public/: index.html  recorder.js
frontend/src/: App.css  App.js
main/: models.py  urls.py  views.py
main/functions/: detectLang.py  initiateChatDictionaryLangchain.py  initiateChatLangchain.py  initiateChatWithContext.py  loadData.py  ollamaInference.py  prompts.py  speechToText.py  textToSpeech.py  translate.py
main/functions/dbops/: getParsedChatHistory.py
main/migrations/: 0001_initial.py  0002_user.py
vtv_pdf_pipeline/: asgi.py  settings.py  urls.py  wsgi.py
yozu_pdf_pipeline/: asgi.py  settings.py  urls.py  wsgi.py
