[project]
name = "yozu-pdf-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.9.5",
    "aiosignal==1.3.1",
    "annotated-types==0.6.0",
    "anyio==4.3.0",
    "asgiref==3.8.1",
    "attrs==23.2.0",
    "azure-cognitiveservices-speech==1.36.0",
    "azure-core==1.30.1",
    "azure-functions==1.18.0",
    "azure-storage-blob==12.19.1",
    "certifi==2024.2.2",
    "cffi==1.16.0",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "cryptography==42.0.5",
    "dataclasses-json==0.6.5",
    "distro==1.9.0",
    "django==4.1.7",
    "django-cors-headers==4.3.1",
    "faiss-cpu==1.8.0",
    "fastjsonschema==2.21.1",
    "frozenlist==1.4.1",
    "greenlet==3.0.3",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httpx==0.27.0",
    "idna==3.7",
    "isodate==0.6.1",
    "jsonpatch==1.33",
    "jsonpointer==2.4",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-core==5.7.2",
    "jupytext==1.16.7",
    "langchain==0.1.14",
    "langchain-community==0.0.34",
    "langchain-core==0.1.46",
    "langchain-openai==0.1.1",
    "langchain-text-splitters==0.0.1",
    "langsmith==0.1.51",
    "markdown-it-py==3.0.0",
    "marshmallow==3.21.1",
    "mdit-py-plugins==0.4.2",
    "mdurl==0.1.2",
    "multidict==6.0.5",
    "mypy-extensions==1.0.0",
    "nbformat==5.10.4",
    "numpy==1.26.4",
    "openai==1.14.2",
    "orjson==3.10.1",
    "packaging==23.2",
    "platformdirs==4.3.7",
    "pycparser==2.22",
    "pydantic==2.7.1",
    "pydantic-core==2.18.2",
    "python-dotenv==1.0.0",
    "pywin32==310",
    "pyyaml==6.0.1",
    "referencing==0.36.2",
    "regex==2024.4.28",
    "requests==2.31.0",
    "rpds-py==0.23.1",
    "six==1.16.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.29",
    "sqlparse==0.5.0",
    "tenacity==8.2.3",
    "tiktoken==0.6.0",
    "tqdm==4.66.2",
    "traitlets==5.14.3",
    "typing-extensions==4.11.0",
    "typing-inspect==0.9.0",
    "tzdata==2024.1",
    "urllib3==2.2.1",
    "yarl==1.9.4",
]
